<resources>
    <string name="app_name">NewYorkList</string>
    <string name="imageViewDescription">Image</string>
    <string name="name">Name</string>
    <string name="detailText">Detail Text</string>
    <string name="date">Date</string>
    <string name="goBack">НАЗАД</string>
    <string name="seeMore">ПОДРОБНЕЕ</string>
    <string name="newslistfragment">NewsListFragment</string>
    <string name="search">Поиск</string>
    <string name="open_review">Открыть статью в браузере</string>
</resources>
