<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_begin="16dp"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_end="16dp"
        android:orientation="vertical" />

    <ImageView
        android:id="@+id/detail_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imageViewDescription"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintEnd_toEndOf="@+id/end"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/detail_image"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintEnd_toEndOf="@+id/end" />

    <TextView
        android:id="@+id/detail_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/detailText"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintEnd_toEndOf="@+id/end" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:text="@string/date"
        app:layout_constraintTop_toBottomOf="@+id/detail_text"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintEnd_toStartOf="@+id/end" />


    <Button
        android:id="@+id/go_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/goBack"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintEnd_toEndOf="@+id/end" />


</androidx.constraintlayout.widget.ConstraintLayout>